# fuchsia

./: .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .gn  .ignore  BUILD.gn  OWNERS  fuchsia.code-workspace  pyproject.toml  pyrightconfig.json  shac.star  shac.textproto
boards/: BUILD.bazel  BUILD.gn  OWNERS  arm64.gni  as370.gni  av400.gni  buckeye.gni  chromebook-x64-dfv2.gni  chromebook-x64.gni  clover.gni  imx8mmevk.gni  qemu-arm64.gni  qemu-riscv64.gni  qemu-x64.gni  riscv64.gni  toulouse.gni  vim3-devicetree.gni  vim3-dfv2.gni  vim3-reduced-perf-variation.gni  vim3.gni  x64-dfv2.gni  x64-fxfs.gni  x64.gni
boards/arm64/: BUILD.gn  board_information.json5
boards/chromebook-x64/: dfv2_board_information.json5
boards/common/: arm64-common.gni  riscv64-common.gni  x64-common.gni
boards/emulation/: virtio_drivers.gni
boards/emulation/virtio/: BUILD.gn
boards/images/: BUILD.gn
boards/imx8mmevk/: board_information.json5
boards/kernel_cmdline/: BUILD.gn
boards/partitions/: BUILD.gn
boards/qemu-arm64/: BUILD.gn  board_information.json5
boards/qemu-riscv64/: BUILD.gn  board_information.json5
boards/qemu-x64/: BUILD.gn  board_information.json5
boards/riscv64/: BUILD.gn  board_information.json5
boards/vim3/: BUILD.gn  board_information.json5  dfv2_board_information.json5
boards/x64/: BUILD.gn  board_information.json5  dfv2_board_information.json5
bundles/: BUILD.gn  OWNERS
bundles/assembly/: BUILD.gn  platform_aib_names.bzl  platform_aib_names.gni  platform_aibs.gni
bundles/assembly/scrutiny/: BUILD.gn
bundles/assembly_input_groups/: BUILD.gn  OWNERS
bundles/boot_tests/: BUILD.gn
bundles/bringup/: BUILD.gn  OWNERS
bundles/buildbot/: BUILD.gn
bundles/buildbot/bringup/: BUILD.gn
bundles/buildbot/core/: BUILD.gn
bundles/buildbot/dfv2/: BUILD.gn
bundles/buildbot/host/: BUILD.gn
bundles/buildbot/media/: BUILD.gn
bundles/buildbot/minimal/: BUILD.gn
bundles/buildbot/terminal/: BUILD.gn
bundles/buildbot/virtualization/: BUILD.gn
bundles/buildbot/workbench/: BUILD.gn
bundles/buildbot/workstation/: BUILD.gn
bundles/drivers/: BUILD.gn
bundles/drivers/pci/: BUILD.gn
bundles/fidl/: BUILD.gn
bundles/infra/test/: BUILD.gn
bundles/kitchen_sink/: BUILD.gn
bundles/tests/: BUILD.gn
bundles/tools/: BUILD.gn
bundles/tools/shac/: BUILD.gn
examples/: BUILD.gn  OWNERS
examples/benchmark/: main.cc
examples/components/: BUILD.gn  METADATA.textproto
examples/components/config/: BUILD.gn  README.md
examples/components/config_from_parent/: BUILD.gn
examples/components/echo/: BUILD.gn
examples/components/lifecycle/: BUILD.gn  README.md
examples/components/pw_rpc/: BUILD.gn  README.md
examples/components/realm_builder/: BUILD.gn
examples/components/routing/: BUILD.gn  README.md
examples/components/routing_failed/: BUILD.gn  README.md
examples/components/runner/: BUILD.gn
examples/components/services/: BUILD.gn  README.md
examples/components/storage/: BUILD.gn
examples/components/subpackages/: BUILD.gn  README.md
examples/cowsay/: BUILD.gn
examples/cpp/: BUILD.gn
examples/cpp/synchronization_checker/: BUILD.gn  main.cc
examples/diagnostics/: BUILD.gn
examples/diagnostics/inspect/: BUILD.gn  OWNERS  README.md
examples/diagnostics/logs/: BUILD.gn
examples/diagnostics/workshop/: BUILD.gn  profile_reader.cc  profile_writer.cc
examples/drivers/: BUILD.gn  OWNERS
examples/drivers/dotmatrix_display/: BUILD.gn  create_ssd1306.cc  fuchsia_logo.cc  main.cc  space_invaders.cc
examples/drivers/driver_test_realm/: BUILD.gn
examples/drivers/fidl_bindlib_codegen/: BUILD.gn  protocol.fidl
examples/drivers/fifo/: BUILD.gn  demo-fifo.c
examples/drivers/transport/: BUILD.gn
examples/fidl/: BUILD.gn
examples/fidl/calculator/: BUILD.gn  README.md
examples/fidl/cpp/: BUILD.gn  README.md
examples/fidl/echo-realm/: BUILD.gn
examples/fidl/fuchsia.examples/: BUILD.gn  echo.test.fidl  types.test.fidl
examples/fidl/fuchsia.examples.docs/: BUILD.gn  api_rubric.test.fidl  attributes.test.fidl  language_reference.test.fidl  life_of_a_handle.test.fidl  style.test.fidl  versioning.test.fidl
examples/fidl/go/: BUILD.gn
examples/fidl/hlcpp/: BUILD.gn
examples/fidl/new/: ORGANIZATION.md
examples/fuzzers/: BUILD.gn  OWNERS  README.md
examples/fuzzers/cpp/: BUILD.gn
examples/fuzzers/zx/: README.md
examples/hello_world/: BUILD.gn  README.md
examples/hello_world/cpp/: BUILD.gn
examples/hello_world/rust/: BUILD.gn
examples/intl/tz_version_parrot/: BUILD.gn
examples/pw_rpc/echo/: BUILD.gn  README.md  pw_rpc_echo.cc
examples/rust/: BUILD.gn
examples/rust/cdylib/: BUILD.gn
examples/rust/dylib/: BUILD.gn
examples/rust/rust_static_linking/: BUILD.gn
examples/rust/staticlib/: BUILD.gn
examples/testing/: BUILD.gn  OWNERS
examples/testing/realm_proxy/: BUILD.gn  README.md
examples/testing/tools/: BUILD.gn  README.md
examples/testing/unittests/: BUILD.gn
examples/tests/: BUILD.gn  OWNERS
examples/tests/rust/: BUILD.gn
examples/time/c/: BUILD.gn  main.c
examples/time/cpp/: main.cc
products/: OWNERS  README.md  bringup.gni  core-with-netstack3.gni  core.gni  core_with_dfv2_fuzzing.gni  core_with_f2fs.gni  core_with_fxblob.gni  core_with_minfs.gni  core_with_netstack3.gni  minimal.gni  speaker.gni  terminal.gni  workbench_eng.gni  workstation.gni  workstation_eng.gni  workstation_eng_dfv2.gni  workstation_eng_paused.gni
products/bringup/: bringup_eng.product_assembly_config.json5
products/common/: OWNERS  bringup.gni  core.gni  core_size_limits.gni  minimal.gni  packages.gni  workstation.gni  workstation_base.gni  workstation_eng.gni
products/core/: BUILD.gn
products/kernel_cmdline/: BUILD.gn
products/minimal/: BUILD.bazel  BUILD.gn
products/terminal/: BUILD.gn  tiles_flatland.core_shard.cml
products/tests/: BUILD.gn  minimal_boot_user.gni  workstation_omaha_eng.gni
products/workbench/: BUILD.bazel  BUILD.gn  platform_config.bzl
products/workstation/: BUILD.gn
products/zedboot/: BUILD.bazel  BUILD.gn
(+34967 files in other folders)
