# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_sdk//fuchsia:assembly.bzl", "fuchsia_board_configuration")

package(default_visibility = ["//visibility:public"])

fuchsia_board_configuration(
    name = "x64",
    board_name = "x64",
    provided_features = [
        "fuchsia::driver_framework_v2_support",
        "fuchsia::wlan_softmac",
    ],
)

fuchsia_board_configuration(
    name = "qemu-x64",
    board_name = "qemu-x64",
    provided_features = [
        "fuchsia::driver_framework_v2_support",
        "fuchsia::wlan_softmac",
    ],
)

fuchsia_board_configuration(
    name = "vim3",
    board_name = "vim3",
    provided_features = [
        "fuchsia::driver_framework_v2_support",
        "fuchsia::fan",
        "fuchsia::usb_peripheral_support",
    ],
)
