# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_sdk//fuchsia:assembly.bzl", "fuchsia_prebuilt_board_configuration")

package(default_visibility = ["//visibility:public"])

fuchsia_prebuilt_board_configuration(
    name = "x64",
    directory = "@legacy_ninja_build_outputs//:x64.bazel_input",
)

fuchsia_prebuilt_board_configuration(
    name = "qemu-x64",
    directory = "@legacy_ninja_build_outputs//:qemu-x64.bazel_input",
)

fuchsia_prebuilt_board_configuration(
    name = "vim3",
    directory = "@legacy_ninja_build_outputs//:vim3.bazel_input",
)

fuchsia_prebuilt_board_configuration(
    name = "riscv64",
    directory = "@legacy_ninja_build_outputs//:riscv64.bazel_input",
)

fuchsia_prebuilt_board_configuration(
    name = "qemu-riscv64",
    directory = "@legacy_ninja_build_outputs//:qemu-riscv64.bazel_input",
)
