# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/arm64-common.gni")

_imports = {  # Import into hidden scope, to avoid importing into args.gn.
  import("//boards/emulation/virtio_drivers.gni")
}

board_name = "arm64"
board_description = "A generic emulated arm64 device."

_bootfs_deps = [ "//src/devices/block/drivers/nvme" ]

# Additional drivers to support running as a virtualization guest.
_bootfs_deps += _imports.virtio_drivers + [
                  "//src/devices/block/drivers/ahci",
                  "//src/devices/board/drivers/acpi-arm64",
                  "//src/devices/board/drivers/qemu-arm64",
                  "//src/devices/rtc/drivers/pl031-rtc",
                ]

board_bootfs_labels += _bootfs_deps
board_recovery_bootfs_labels += _bootfs_deps
board_zedboot_bootfs_labels += _bootfs_deps

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

# Build a UEFI image for virtualized platforms.
build_uefi_disk = true
use_gigaboot = true
use_vbmeta = true
avb_atx_metadata =
    "//third_party/android/platform/external/avb/test/data/atx_metadata.bin"
avb_key =
    "//third_party/android/platform/external/avb/test/data/testkey_atx_psk.pem"

images_config_label = "//boards/images:arm64"
zedboot_images_config_label = "//boards/images:zedboot_default"
bringup_images_config_label = "//boards/images:bringup_default"
partitions_config_label = "//boards/partitions:arm64"
partitions_config_contents += [ "$root_build_dir/fuchsia.esp.blk" ]
