# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("chromebook-x64.gni")

# BoardInformation for Product Assembly
board_information_for_assembly =
    "//boards/chromebook-x64/dfv2_board_information.json5"

board_bootfs_labels +=
    [ "//src/media/audio/drivers/codecs/da7219:component-dfv2" ]
