# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/common/arm64-common.gni")

board_name = "clover"
board_description = "clover"

_common_bootfs_deps = [
  "//boards/kernel_cmdline:clover",
  "//src/devices/block/drivers/aml-sdmmc",
  "//src/devices/block/drivers/ftl",
  "//src/devices/board/drivers/clover",
  "//src/devices/clock/drivers/amlogic-clk",
  "//src/devices/cpu/drivers/aml-cpu",
  "//src/devices/gpio/drivers/aml-gpio",
  "//src/devices/i2c/drivers/aml-i2c",
  "//src/devices/mailbox/drivers/aml-pl-mailbox",
  "//src/devices/nand/drivers/aml-spinand",
  "//src/devices/nand/drivers/nand",
  "//src/devices/nand/drivers/nandpart",
  "//src/devices/nand/drivers/skip-block",
  "//src/devices/pwm/drivers/aml-pwm",
  "//src/devices/ram/drivers/aml-ram",
  "//src/devices/registers/drivers/registers",
  "//src/devices/spi/drivers/aml-spi",
  "//src/devices/sysmem/drivers/sysmem",
  "//src/devices/tee/drivers/optee",
  "//src/devices/thermal/drivers/aml-thermal",
  "//src/devices/usb/drivers/a1-usb-phy",
  "//src/media/audio/drivers/aml-dsp",
]

board_bootfs_labels += _common_bootfs_deps

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps

use_gigaboot = false
use_vbmeta = true

# workaround: use vim3 key
avb_key = "//src/firmware/avb_keys/vim3/vim3-dev-key/vim3_devkey_atx_psk.pem"
avb_algorithm = "SHA512_RSA4096"
avb_atx_metadata =
    "//src/firmware/avb_keys/vim3/vim3-dev-key/vim3_dev_atx_metadata.bin"

# partitions for fx flash to flash
zircon_a_partition = "zircon_a"
zircon_b_partition = "zircon_b"
zircon_r_partition = "zircon_r"
vbmeta_a_partition = "vbmeta_a"
vbmeta_b_partition = "vbmeta_b"
vbmeta_r_partition = "vbmeta_r"
active_partition = "a"
fastboot_product = "clover"
fvm_partition = "fvm"

# total 512M
fvm_ftl_nand_page_size = 4096
fvm_ftl_nand_oob_size = 128
fvm_ftl_nand_pages_per_block = 64
fvm_ftl_nand_block_count = 1604

# Supports only physical devices.
board_is_emu = false
board_is_phys = true

images_config_label = "//boards/images:clover"
zedboot_images_config_label = "//boards/images:zedboot_vim3"
bringup_images_config_label = "//boards/images:bringup_vim3"
bringup_fastboot_images_config_label = "//boards/images:bringup_fastboot_vim3"
partitions_config_label = "//boards/partitions:clover"
