# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/arm64-common.gni")

_imports = {  # Import into hidden scope, to avoid importing into args.gn.
  import("//boards/emulation/virtio_drivers.gni")
}

board_name = "qemu-arm64"
add_qemu_to_build_archives = true

_bootfs_deps = [ "//src/devices/block/drivers/nvme" ]

# Additional drivers to support running as a virtualization guest.
_bootfs_deps += _imports.virtio_drivers + [
                  "//src/devices/block/drivers/ahci",
                  "//src/devices/board/drivers/acpi-arm64",
                  "//src/devices/board/drivers/qemu-arm64",
                  "//src/devices/rtc/drivers/pl031-rtc",
                ]

board_bootfs_labels += _bootfs_deps
board_recovery_bootfs_labels += _bootfs_deps
board_zedboot_bootfs_labels += _bootfs_deps

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

images_config_label = "//boards/images:qemu-arm64"
partitions_config_label = "//boards/partitions:default"
zedboot_images_config_label = "//boards/images:zedboot_qemu"
bringup_images_config_label = "//boards/images:bringup_qemu"
