# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/riscv64-common.gni")

# BoardInformation for Product Assembly
board_information_for_assembly = "//boards/qemu-riscv64/board_information.json5"

board_name = "qemu-riscv64"

add_qemu_to_build_archives = true

board_package_labels += [ "//src/factory/factory_store_providers/config/qemu" ]

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

images_config_label = "//boards/images:qemu-riscv64"
zedboot_images_config_label = "//boards/images:zedboot_qemu"
bringup_images_config_label = "//boards/images:bringup_qemu"
partitions_config_label = "//boards/partitions:qemu-riscv64"
