# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/riscv64-common.gni")

# Board configuration for Product Assembly
board_configuration_label = "//boards/qemu-riscv64"

board_name = "qemu-riscv64"

add_qemu_to_build_archives = true

board_package_labels += [ "//src/factory/factory_store_providers/config/qemu" ]

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

partitions_config_label = "//boards/partitions:qemu-riscv64"
