# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/x64-common.gni")

# Board configuration for Product Assembly
board_configuration_label = "//boards/qemu-x64"

board_name = "qemu-x64"

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

partitions_config_label = "//boards/partitions:qemu-x64"

bazel_product_bundle_board = "qemu-x64"
