# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/riscv64-common.gni")

# BoardInformation for Product Assembly
board_information_for_assembly = "//boards/riscv64/board_information.json5"

board_name = "riscv64"
board_description = "A generic emulated riscv64 device."

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

images_config_label = "//boards/images:riscv64"
zedboot_images_config_label = "//boards/images:zedboot_default"
partitions_config_label = "//boards/partitions:riscv64"
