# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/common/riscv64-common.gni")

_imports = {  # Import into hidden scope, to avoid importing into args.gn.
  import("//boards/emulation/virtio_drivers.gni")
}

# BoardInformation for Product Assembly
board_information_for_assembly = "//boards/riscv64/board_information.json5"

board_name = "riscv64"
board_description = "A generic emulated riscv64 device."

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

platform_enable_user_pci = true
board_bootfs_labels += [
  "//src/devices/bus/drivers/pci:bus-pci",
  "//src/devices/board/drivers/qemu-riscv64",

  # Configs
  "//src/power/power-manager:base_config",
  "//src/security/policy/zxcrypt:null",
]
board_bootfs_labels += _imports.virtio_drivers

images_config_label = "//boards/images:riscv64"
zedboot_images_config_label = "//boards/images:zedboot_qemu"
bringup_images_config_label = "//boards/images:bringup_qemu"
bringup_fastboot_images_config_label = "//boards/images:bringup_fastboot_qemu"
partitions_config_label = "//boards/partitions:riscv64"

# The Go toolchain used for netstack2 does not support RISC-V.
use_netstack3 = true
