# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/vim3.gni")
import("//build/devicetree/args.gni")

board_description = "A generic vim3 device (using devicetree)"

# Board configuration for Product Assembly
board_configuration_label = "//boards/vim3:vim3-devicetree"

devicetree_board_driver = true

kernel_zbi_extra_deps =
    [ "//src/devices/board/drivers/vim3-devicetree:vim3-dtb-item" ]
