# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("vim3.gni")

# BoardInformation for Product Assembly
board_information_for_assembly = "//boards/vim3/dfv2_board_information.json5"
