# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# NOTE: if you touch this file, please add this line to your commit
# description so that the vim3 tests are run as we do not run vim3 tests in CQ
# by default.
# Cq-Include-Trybots: luci.turquoise.global.try:bringup.vim3-debug,core.vim3-debug,core.vim3-vg-debug

import("//boards/common/arm64-common.gni")

# Board configuration for Product Assembly
board_configuration_label = "//boards/vim3"

board_name = "vim3"
board_description = "A generic vim3 device"

# Remove drivers added by arm64-common.gni that are now in the vim3 board.
_common_bootfs_deps_to_remove = [
  "//src/devices/bus/drivers/pci:bus-pci",
  "//src/devices/usb/drivers/xhci",
]
board_bootfs_labels -= _common_bootfs_deps_to_remove
board_zedboot_bootfs_labels -= _common_bootfs_deps_to_remove
board_recovery_bootfs_labels -= _common_bootfs_deps_to_remove

# Additional, non-driver, bootfs deps
_common_bootfs_deps = [
  "//boards/kernel_cmdline:vim3",
  "//src/power/power-manager/thermal_config:vim3",
]

board_bootfs_labels += _common_bootfs_deps

board_bootfs_labels -= [ "//src/power/power-manager:base_config" ]
board_bootfs_labels += [ "//src/power/power-manager:vim3_config" ]

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps

board_package_labels += [ "//src/graphics/drivers/msd-arm-mali:msd-config" ]

# Board file adds vulkan VCD that lets vulkan tests work on systems with Mali GPUs.
board_has_libvulkan_arm_mali = true

firmware_prebuilts_path_suffix = ""
firmware_prebuilts = [
  {
    type = ""
    path = "//prebuilt/third_party/firmware/vim3/u-boot.bin.unsigned"
    partition = "bootloader"
  },
]

use_gigaboot = false
use_vbmeta = true
avb_key = "//src/firmware/avb_keys/vim3/vim3-dev-key/vim3_devkey_atx_psk.pem"
avb_algorithm = "SHA512_RSA4096"
avb_atx_metadata =
    "//src/firmware/avb_keys/vim3/vim3-dev-key/vim3_dev_atx_metadata.bin"

# partitions for fx flash to flash
zircon_a_partition = "zircon_a"
zircon_b_partition = "zircon_b"
zircon_r_partition = "zircon_r"
vbmeta_a_partition = "vbmeta_a"
vbmeta_b_partition = "vbmeta_b"
vbmeta_r_partition = "vbmeta_r"
fvm_partition = "fvm"
fxfs_partition = "fvm"
active_partition = "a"
fastboot_product = "galilei"

assembly_generate_fvm_fastboot = true

# Supports only physical devices.
board_is_emu = false
board_is_phys = true

partitions_config_label = "//boards/partitions:vim3"
partitions_config_contents +=
    [ "//prebuilt/third_party/firmware/vim3/u-boot.bin.unsigned" ]

bazel_product_bundle_board = "vim3"
