# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//sdk/lib/driver_test_realm/driver_test_realm.gni")
import("x64.gni")

# BoardInformation for Product Assembly
board_information_for_assembly = "//boards/x64/dfv2_board_information.json5"

use_driver_framework_v2_default = true
