# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("x64.gni")

fxfs_blob = true
delivery_blob_type = 1  # Fxblob only supports delivery blobs.

fvm_partition = ""
fxfs_partition = "fvm"
partitions_config_label = "//boards/partitions:x64-fxfs"
images_config_label = "//boards/images:x64-fxfs"
